fixed spacing in navbar
fixed some padding and icons for nav

--- a/StateTemplateV5Beta/Content/StateTemplate/css/custom1.css
+++ b/StateTemplateV5Beta/Content/StateTemplate/css/custom1.css
@@ -300,9 +300,9 @@
         border: 1px solid #ccc;
     }
 
-    #search_ca_textfield, #search_local_textfield, #search_catalog_textfield, #search_btbl_textfield {
+   /* #search_ca_textfield, #search_local_textfield, #search_catalog_textfield, #search_btbl_textfield {
         border: 1px solid #ccc;
-    }
+    }*/
 
     .ask {
         float: none;
@@ -855,16 +855,28 @@
     width: 100%;
 }
 
+
 #search_ca_textfield, #search_local_textfield, #search_catalog_textfield, #search_btbl_textfield {
-    border: 3px solid #ccc;
+   /* border: 3px solid #ccc;*/
     background-color: #fff;
-    padding: 10px;
+   /* padding: 10px;*/
     width: 100%; /* 183 - 8 */
     color: #505050;
     font-size: 0.92em;
     z-index: 100000;
 }
 
+/*****
+    nav fixes
+*/
+
+#search_ca_textfield, #search_local_textfield, #search_catalog_textfield, #search_btbl_textfield {
+    padding: 6px;
+    border: 0;
+}
+
+/*******/
+    
 .submit_container {
     float: right;
     padding-left: 15px;
